overflow in item card fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -227,6 +227,9 @@ table {
         }
         .details {
             font-size: 13px;
+            white-space: nowrap; 
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         .price {
             font-weight: 500;
